4484 lockd: SMF property reading and cli options are incorrect Reviewed by: Gary Mills <gary_mills@fastmail.fm> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: T Nguyen <truongqnguien@gmail.com> Reviewed by: Jan Kryl <jan.kryl@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>